// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Star Shape Presets star4 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 41.161165235168156,
    "y": 41.161165235168156,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 58.838834764831844,
    "y": 41.161165235168156,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 58.838834764831844,
    "y": 58.838834764831844,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 41.161165235168156,
    "y": 58.838834764831844,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star5 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0.00010576881489043899,
    "y": 38.19650407644447,
  },
  {
    "type": "L",
    "x": 38.19681185109177,
    "y": 38.196772907038735,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 61.80318814890823,
    "y": 38.196772907038735,
  },
  {
    "type": "L",
    "x": 99.99989423118511,
    "y": 38.19650407644447,
  },
  {
    "type": "L",
    "x": 69.09795960054346,
    "y": 61.80313916296127,
  },
  {
    "type": "L",
    "x": 80.90163406877218,
    "y": 99.99974592355554,
  },
  {
    "type": "L",
    "x": 50,
    "y": 76.39267586,
  },
  {
    "type": "L",
    "x": 19.09836593122782,
    "y": 99.99974592355554,
  },
  {
    "type": "L",
    "x": 30.90204039945654,
    "y": 61.80313916296127,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star6 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0.000023312505433636943,
    "y": 25,
  },
  {
    "type": "L",
    "x": 33.3330602,
    "y": 24.999578643550826,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 66.6669398,
    "y": 24.999578643550826,
  },
  {
    "type": "L",
    "x": 99.99997668749457,
    "y": 25,
  },
  {
    "type": "L",
    "x": 83.3338796,
    "y": 50,
  },
  {
    "type": "L",
    "x": 99.99997668749457,
    "y": 75,
  },
  {
    "type": "L",
    "x": 66.6669398,
    "y": 75.00042135644918,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 33.3330602,
    "y": 75.00042135644918,
  },
  {
    "type": "L",
    "x": 0.000023312505433636943,
    "y": 75,
  },
  {
    "type": "L",
    "x": 16.666120399999997,
    "y": 50,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star7 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": -0.0002599799999956076,
    "y": 64.3106646,
  },
  {
    "type": "L",
    "x": 15.398820088640399,
    "y": 44.504445983508,
  },
  {
    "type": "L",
    "x": 9.903066619999997,
    "y": 19.806308549999997,
  },
  {
    "type": "L",
    "x": 34.6011919420464,
    "y": 19.806347509263,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 65.3988080579536,
    "y": 19.806347509263,
  },
  {
    "type": "L",
    "x": 90.09693338,
    "y": 19.806308549999997,
  },
  {
    "type": "L",
    "x": 84.6011799113596,
    "y": 44.504445983508,
  },
  {
    "type": "L",
    "x": 100.00025998,
    "y": 64.3106646,
  },
  {
    "type": "L",
    "x": 77.7478798376276,
    "y": 75.302350457229,
  },
  {
    "type": "L",
    "x": 72.25196968,
    "y": 100.00052685,
  },
  {
    "type": "L",
    "x": 50,
    "y": 89.0087121,
  },
  {
    "type": "L",
    "x": 27.74803032,
    "y": 100.00052685,
  },
  {
    "type": "L",
    "x": 22.252120162372403,
    "y": 75.302350457229,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star8 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 15.354500000000002,
    "y": 35.6495,
  },
  {
    "type": "L",
    "x": 14.644660940672622,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 35.6495,
    "y": 15.354500000000002,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 64.3505,
    "y": 15.354500000000002,
  },
  {
    "type": "L",
    "x": 85.35533905932738,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 84.6455,
    "y": 35.6495,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 84.6455,
    "y": 64.3505,
  },
  {
    "type": "L",
    "x": 85.35533905932738,
    "y": 85.35533905932738,
  },
  {
    "type": "L",
    "x": 64.3505,
    "y": 84.6455,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 35.6495,
    "y": 84.6455,
  },
  {
    "type": "L",
    "x": 14.644660940672622,
    "y": 85.35533905932738,
  },
  {
    "type": "L",
    "x": 15.354500000000002,
    "y": 64.3505,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star10 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": -0.00007738000000045986,
    "y": 34.549,
  },
  {
    "type": "L",
    "x": 13.819211287416401,
    "y": 24.99952793,
  },
  {
    "type": "L",
    "x": 19.09811633,
    "y": 9.549,
  },
  {
    "type": "L",
    "x": 36.180085377416404,
    "y": 9.548565019999998,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 63.819914622583596,
    "y": 9.548565019999998,
  },
  {
    "type": "L",
    "x": 80.90188367,
    "y": 9.549,
  },
  {
    "type": "L",
    "x": 86.18078871258359,
    "y": 24.99952793,
  },
  {
    "type": "L",
    "x": 100.00007738,
    "y": 34.549,
  },
  {
    "type": "L",
    "x": 94.72174817999999,
    "y": 50,
  },
  {
    "type": "L",
    "x": 100.00007738,
    "y": 65.451,
  },
  {
    "type": "L",
    "x": 86.18078871258359,
    "y": 75.00047207,
  },
  {
    "type": "L",
    "x": 80.90188367,
    "y": 90.451,
  },
  {
    "type": "L",
    "x": 63.819914622583596,
    "y": 90.45143498,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 36.180085377416404,
    "y": 90.45143498,
  },
  {
    "type": "L",
    "x": 19.09811633,
    "y": 90.451,
  },
  {
    "type": "L",
    "x": 13.819211287416401,
    "y": 75.00047207,
  },
  {
    "type": "L",
    "x": -0.00007738000000045986,
    "y": 65.451,
  },
  {
    "type": "L",
    "x": 5.278251820000001,
    "y": 50,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star12 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 13.77778151415994,
    "y": 40.294285808655474,
  },
  {
    "type": "L",
    "x": 6.698729810778062,
    "y": 25,
  },
  {
    "type": "L",
    "x": 23.483495705504467,
    "y": 23.48349570550447,
  },
  {
    "type": "L",
    "x": 25,
    "y": 6.698729810778069,
  },
  {
    "type": "L",
    "x": 40.29428580865547,
    "y": 13.77778151415994,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 59.70571419134453,
    "y": 13.77778151415994,
  },
  {
    "type": "L",
    "x": 75,
    "y": 6.698729810778069,
  },
  {
    "type": "L",
    "x": 76.51650429449553,
    "y": 23.48349570550447,
  },
  {
    "type": "L",
    "x": 93.30127018922194,
    "y": 25,
  },
  {
    "type": "L",
    "x": 86.22221848584006,
    "y": 40.294285808655474,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 86.22221848584006,
    "y": 59.705714191344526,
  },
  {
    "type": "L",
    "x": 93.30127018922194,
    "y": 75,
  },
  {
    "type": "L",
    "x": 76.51650429449553,
    "y": 76.51650429449553,
  },
  {
    "type": "L",
    "x": 75,
    "y": 93.30127018922192,
  },
  {
    "type": "L",
    "x": 59.70571419134453,
    "y": 86.22221848584006,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 40.29428580865547,
    "y": 86.22221848584006,
  },
  {
    "type": "L",
    "x": 25,
    "y": 93.30127018922192,
  },
  {
    "type": "L",
    "x": 23.483495705504467,
    "y": 76.51650429449553,
  },
  {
    "type": "L",
    "x": 6.698729810778062,
    "y": 75,
  },
  {
    "type": "L",
    "x": 13.77778151415994,
    "y": 59.705714191344526,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star16 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 13.220374999999997,
    "y": 42.684125,
  },
  {
    "type": "L",
    "x": 3.8059999999999974,
    "y": 30.866,
  },
  {
    "type": "L",
    "x": 18.819875,
    "y": 29.166125,
  },
  {
    "type": "L",
    "x": 14.6445,
    "y": 14.6445,
  },
  {
    "type": "L",
    "x": 29.166125,
    "y": 18.819875,
  },
  {
    "type": "L",
    "x": 30.866,
    "y": 3.8059999999999974,
  },
  {
    "type": "L",
    "x": 42.684125,
    "y": 13.220374999999997,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 57.315875,
    "y": 13.220374999999997,
  },
  {
    "type": "L",
    "x": 69.134,
    "y": 3.8059999999999974,
  },
  {
    "type": "L",
    "x": 70.833875,
    "y": 18.819875,
  },
  {
    "type": "L",
    "x": 85.3555,
    "y": 14.6445,
  },
  {
    "type": "L",
    "x": 81.180125,
    "y": 29.166125,
  },
  {
    "type": "L",
    "x": 96.194,
    "y": 30.866,
  },
  {
    "type": "L",
    "x": 86.77962500000001,
    "y": 42.684125,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 86.77962500000001,
    "y": 57.315875,
  },
  {
    "type": "L",
    "x": 96.194,
    "y": 69.134,
  },
  {
    "type": "L",
    "x": 81.180125,
    "y": 70.833875,
  },
  {
    "type": "L",
    "x": 85.3555,
    "y": 85.3555,
  },
  {
    "type": "L",
    "x": 70.833875,
    "y": 81.180125,
  },
  {
    "type": "L",
    "x": 69.134,
    "y": 96.194,
  },
  {
    "type": "L",
    "x": 57.315875,
    "y": 86.77962500000001,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 42.684125,
    "y": 86.77962500000001,
  },
  {
    "type": "L",
    "x": 30.866,
    "y": 96.194,
  },
  {
    "type": "L",
    "x": 29.166125,
    "y": 81.180125,
  },
  {
    "type": "L",
    "x": 14.6445,
    "y": 85.3555,
  },
  {
    "type": "L",
    "x": 18.819875,
    "y": 70.833875,
  },
  {
    "type": "L",
    "x": 3.8059999999999974,
    "y": 69.134,
  },
  {
    "type": "L",
    "x": 13.220374999999997,
    "y": 57.315875,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star24 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 12.820999999999998,
    "y": 45.105125,
  },
  {
    "type": "L",
    "x": 1.7037086855465873,
    "y": 37.059047744873965,
  },
  {
    "type": "L",
    "x": 15.354500000000002,
    "y": 35.6495,
  },
  {
    "type": "L",
    "x": 6.698729810778062,
    "y": 25,
  },
  {
    "type": "L",
    "x": 20.249375,
    "y": 27.1715,
  },
  {
    "type": "L",
    "x": 14.644660940672622,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 27.1715,
    "y": 20.249375,
  },
  {
    "type": "L",
    "x": 25,
    "y": 6.698729810778069,
  },
  {
    "type": "L",
    "x": 35.6495,
    "y": 15.354500000000002,
  },
  {
    "type": "L",
    "x": 37.05904774487395,
    "y": 1.7037086855465873,
  },
  {
    "type": "L",
    "x": 45.105125,
    "y": 12.820999999999998,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 54.894875,
    "y": 12.820999999999998,
  },
  {
    "type": "L",
    "x": 62.94095225512605,
    "y": 1.7037086855465873,
  },
  {
    "type": "L",
    "x": 64.3505,
    "y": 15.354500000000002,
  },
  {
    "type": "L",
    "x": 75,
    "y": 6.698729810778069,
  },
  {
    "type": "L",
    "x": 72.82849999999999,
    "y": 20.249375,
  },
  {
    "type": "L",
    "x": 85.35533905932738,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 79.750625,
    "y": 27.1715,
  },
  {
    "type": "L",
    "x": 93.30127018922194,
    "y": 25,
  },
  {
    "type": "L",
    "x": 84.6455,
    "y": 35.6495,
  },
  {
    "type": "L",
    "x": 98.29629131445341,
    "y": 37.059047744873965,
  },
  {
    "type": "L",
    "x": 87.179,
    "y": 45.105125,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 87.179,
    "y": 54.894875,
  },
  {
    "type": "L",
    "x": 98.29629131445341,
    "y": 62.940952255126035,
  },
  {
    "type": "L",
    "x": 84.6455,
    "y": 64.3505,
  },
  {
    "type": "L",
    "x": 93.30127018922194,
    "y": 75,
  },
  {
    "type": "L",
    "x": 79.750625,
    "y": 72.82849999999999,
  },
  {
    "type": "L",
    "x": 85.35533905932738,
    "y": 85.35533905932738,
  },
  {
    "type": "L",
    "x": 72.82849999999999,
    "y": 79.750625,
  },
  {
    "type": "L",
    "x": 75,
    "y": 93.30127018922192,
  },
  {
    "type": "L",
    "x": 64.3505,
    "y": 84.6455,
  },
  {
    "type": "L",
    "x": 62.94095225512605,
    "y": 98.29629131445341,
  },
  {
    "type": "L",
    "x": 54.894875,
    "y": 87.179,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 45.105125,
    "y": 87.179,
  },
  {
    "type": "L",
    "x": 37.05904774487395,
    "y": 98.29629131445341,
  },
  {
    "type": "L",
    "x": 35.6495,
    "y": 84.6455,
  },
  {
    "type": "L",
    "x": 25,
    "y": 93.30127018922192,
  },
  {
    "type": "L",
    "x": 27.1715,
    "y": 79.750625,
  },
  {
    "type": "L",
    "x": 14.644660940672622,
    "y": 85.35533905932738,
  },
  {
    "type": "L",
    "x": 20.249375,
    "y": 72.82849999999999,
  },
  {
    "type": "L",
    "x": 6.698729810778062,
    "y": 75,
  },
  {
    "type": "L",
    "x": 15.354500000000002,
    "y": 64.3505,
  },
  {
    "type": "L",
    "x": 1.7037086855465873,
    "y": 62.940952255126035,
  },
  {
    "type": "L",
    "x": 12.820999999999998,
    "y": 54.894875,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Star Shape Presets star32 should generate snapshot-stable path 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 12.680750000000003,
    "y": 46.32425,
  },
  {
    "type": "L",
    "x": 0.9605000000000032,
    "y": 40.2455,
  },
  {
    "type": "L",
    "x": 14.11475,
    "y": 39.1145,
  },
  {
    "type": "L",
    "x": 3.8059999999999974,
    "y": 30.866,
  },
  {
    "type": "L",
    "x": 16.927999999999997,
    "y": 32.322500000000005,
  },
  {
    "type": "L",
    "x": 8.426499999999997,
    "y": 22.2215,
  },
  {
    "type": "L",
    "x": 21.012125,
    "y": 26.210375,
  },
  {
    "type": "L",
    "x": 14.644660940672622,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 26.210375,
    "y": 21.012125,
  },
  {
    "type": "L",
    "x": 22.2215,
    "y": 8.426499999999997,
  },
  {
    "type": "L",
    "x": 32.322500000000005,
    "y": 16.927999999999997,
  },
  {
    "type": "L",
    "x": 30.866,
    "y": 3.8059999999999974,
  },
  {
    "type": "L",
    "x": 39.1145,
    "y": 14.11475,
  },
  {
    "type": "L",
    "x": 40.2455,
    "y": 0.9605000000000032,
  },
  {
    "type": "L",
    "x": 46.32425,
    "y": 12.680750000000003,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 53.67575,
    "y": 12.680750000000003,
  },
  {
    "type": "L",
    "x": 59.7545,
    "y": 0.9605000000000032,
  },
  {
    "type": "L",
    "x": 60.8855,
    "y": 14.11475,
  },
  {
    "type": "L",
    "x": 69.134,
    "y": 3.8059999999999974,
  },
  {
    "type": "L",
    "x": 67.6775,
    "y": 16.927999999999997,
  },
  {
    "type": "L",
    "x": 77.77850000000001,
    "y": 8.426499999999997,
  },
  {
    "type": "L",
    "x": 73.789625,
    "y": 21.012125,
  },
  {
    "type": "L",
    "x": 85.35533905932738,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 78.987875,
    "y": 26.210375,
  },
  {
    "type": "L",
    "x": 91.5735,
    "y": 22.2215,
  },
  {
    "type": "L",
    "x": 83.072,
    "y": 32.322500000000005,
  },
  {
    "type": "L",
    "x": 96.194,
    "y": 30.866,
  },
  {
    "type": "L",
    "x": 85.88525,
    "y": 39.1145,
  },
  {
    "type": "L",
    "x": 99.0395,
    "y": 40.2455,
  },
  {
    "type": "L",
    "x": 87.31925,
    "y": 46.32425,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 87.31925,
    "y": 53.67575,
  },
  {
    "type": "L",
    "x": 99.0395,
    "y": 59.7545,
  },
  {
    "type": "L",
    "x": 85.88525,
    "y": 60.8855,
  },
  {
    "type": "L",
    "x": 96.194,
    "y": 69.134,
  },
  {
    "type": "L",
    "x": 83.072,
    "y": 67.6775,
  },
  {
    "type": "L",
    "x": 91.5735,
    "y": 77.77850000000001,
  },
  {
    "type": "L",
    "x": 78.987875,
    "y": 73.789625,
  },
  {
    "type": "L",
    "x": 85.35533905932738,
    "y": 85.35533905932738,
  },
  {
    "type": "L",
    "x": 73.789625,
    "y": 78.987875,
  },
  {
    "type": "L",
    "x": 77.77850000000001,
    "y": 91.5735,
  },
  {
    "type": "L",
    "x": 67.6775,
    "y": 83.072,
  },
  {
    "type": "L",
    "x": 69.134,
    "y": 96.194,
  },
  {
    "type": "L",
    "x": 60.8855,
    "y": 85.88525,
  },
  {
    "type": "L",
    "x": 59.7545,
    "y": 99.0395,
  },
  {
    "type": "L",
    "x": 53.67575,
    "y": 87.31925,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 46.32425,
    "y": 87.31925,
  },
  {
    "type": "L",
    "x": 40.2455,
    "y": 99.0395,
  },
  {
    "type": "L",
    "x": 39.1145,
    "y": 85.88525,
  },
  {
    "type": "L",
    "x": 30.866,
    "y": 96.194,
  },
  {
    "type": "L",
    "x": 32.322500000000005,
    "y": 83.072,
  },
  {
    "type": "L",
    "x": 22.2215,
    "y": 91.5735,
  },
  {
    "type": "L",
    "x": 26.210375,
    "y": 78.987875,
  },
  {
    "type": "L",
    "x": 14.644660940672622,
    "y": 85.35533905932738,
  },
  {
    "type": "L",
    "x": 21.012125,
    "y": 73.789625,
  },
  {
    "type": "L",
    "x": 8.426499999999997,
    "y": 77.77850000000001,
  },
  {
    "type": "L",
    "x": 16.927999999999997,
    "y": 67.6775,
  },
  {
    "type": "L",
    "x": 3.8059999999999974,
    "y": 69.134,
  },
  {
    "type": "L",
    "x": 14.11475,
    "y": 60.8855,
  },
  {
    "type": "L",
    "x": 0.9605000000000032,
    "y": 59.7545,
  },
  {
    "type": "L",
    "x": 12.680750000000003,
    "y": 53.67575,
  },
  {
    "type": "Z",
  },
]
`;
